--- a/contents/projects/predict-demo/ai2.html
+++ b/contents/projects/predict-demo/ai2.html
@@ -48,7 +48,7 @@
 
       const maxIndex = outputData.indexOf(Math.max(...outputData));
       const outputmaxIndex = maxIndex;
-      
+
       var resultShow;
       switch (maxIndex) {
         case 0:
@@ -60,10 +60,17 @@
         case 2:
           resultShow = "DRAW";
           break;
-          }
+      }
       document.getElementById("result").value = resultShow;
     }
   </script>
+
+<style>
+  body {
+    background-color: #F9F9F9;
+  }
+</style>
+
 </head>
 
 <body>
@@ -100,8 +107,10 @@
   <center>age1: <input id="v10" value="-"></center> <br>
   <center>age2: <input id="v07" value="44.0"></center> <br>
   <center><button onclick="make_prediction()">predict</button></center>
-  <br>
-  <center>Probability:<input id="probability" size="50"></center> <br>
+  <center><img
+      src="https://github.com/jingwora/jingwora.github.io/raw/master/contents/projects/predict-demo/img/ai_w_03.gif"
+      height="300"></center>
+  <center>Probability:<input id="probability" size="40"></center> <br>
   <center>Result:<input id="result" size="25"></center>
   <br> <br>
 </body>
