--- a/contents/projects/predict-demo/ai2.html
+++ b/contents/projects/predict-demo/ai2.html
@@ -196,6 +196,8 @@
           D Odds:<input id="oddsDraw" size="5">
     </div>
   </div>
+  <br>
+  <center>Note: Max odds: 99, Min odds: 1.01</center>
 
   <br> <br>
 </body>
