--- a/contents/projects/predict-demo/ai2.html
+++ b/contents/projects/predict-demo/ai2.html
@@ -145,7 +145,11 @@
 
   <!-- CONTENT -->
 
-  <center> <br><br><br><h1>Odds Prediction</h1><br><br></center>
+  <center> <br><br><br><h1>Odds Prediction</h1><br></center>
+
+  <!-- Input -->
+  <center> <h3>Input</h3></center>
+
   <div class="prob-container" style="display:flex; justify-content:center;">
     <div class="prob-container" style="float:left;">
       Boxer1  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
@@ -216,10 +220,15 @@
   </div>
   <br>
 
-  <center><button onclick="make_prediction()">predict</button></center>
+  <center><button onclick="make_prediction()">Predict!</button></center>
+
   <center><img id="runImage"
       src="https://github.com/jingwora/jingwora.github.io/raw/master/contents/projects/predict-demo/img/ai_w_03.gif"
       height="300" width="300"></center>
+  
+  <!-- Output -->
+  <center> <h3>Result</h3></center>
+  <br>
 
   <div class="prob-container" style="display:flex; justify-content:center;">
         <div class="prob-container" style="float:left;">
