--- a/contents/projects/predict-demo/ai2.html
+++ b/contents/projects/predict-demo/ai2.html
@@ -84,10 +84,10 @@
         var resultShow;
         switch (maxIndex) {
           case 0:
-            resultShow = "WIN";
+            resultShow = "Boxer1 WIN";
             break;
           case 1:
-            resultShow = "LOSE";
+            resultShow = "Boxer1 LOSE";
             break;
           case 2:
             resultShow = "DRAW";
