--- a/contents/projects/predict-demo/ai2.html
+++ b/contents/projects/predict-demo/ai2.html
@@ -243,13 +243,13 @@
 
   <div class="prob-container" style="display:flex; justify-content:center;">
     <div class="prob-container" style="float:left;">
-      W prob:<input id="probWin" size="5"> &nbsp
+      W prob.:<input id="probWin" size="5"> &nbsp
     </div>
     <div class="prob-container" style="float:left;">
-      L prob:<input id="probLoss" size="5"> &nbsp
+      L prob.:<input id="probLoss" size="5"> &nbsp
     </div>
     <div class="prob-container" style="float:left;">
-      D prob:<input id="probDraw" size="5">
+      D prob.:<input id="probDraw" size="5">
     </div>
   </div>
 
@@ -259,17 +259,54 @@
 
   <div class="prob-container" style="display:flex; justify-content:center;">
     <div class="prob-container" style="float:left;">
-      W Odds:<input id="oddsWin" size="5"> &nbsp
+      W odds:<input id="oddsWin" size="5"> &nbsp
     </div>
     <div class="prob-container" style="float:left;">
-      L Odds:<input id="oddsLoss" size="5"> &nbsp
+      L odds:<input id="oddsLoss" size="5"> &nbsp
     </div>
     <div class="prob-container" style="float:left;">
-      D Odds:<input id="oddsDraw" size="5">
+      D odds:<input id="oddsDraw" size="5">
     </div>
   </div>
   <br>
-  <center>Note: Max odds: 99, Min odds: 1.01</center>
+
+  <!-- KO -->
+  <center> ====================================== </center>
+  <br>
+
+  <div class="prob-container" style="display:flex; justify-content:center;">
+    <div class="prob-container" style="float:left;">
+      KOs prob.:<input id="oddsWin" size="5"> &nbsp
+    </div>
+    <div class="prob-container" style="float:left;">
+      Points prob.:<input id="oddsDraw" size="5">
+    </div>
+  </div>
+  <br>
+
+  <div class="prob-container" style="display:flex; justify-content:center;">
+    <div class="prob-container" style="float:left;">
+      KOs odds:<input id="oddsWin" size="5"> &nbsp
+    </div>
+    <div class="prob-container" style="float:left;">
+      Points odds:<input id="oddsDraw" size="5">
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+
+  <!-- Defintions -->
+
+  <center>
+    <h4>Defintions</h4>
+  </center>
+  <br>
+  <center>WIN includes OK win, TKO win and win on points and win by disqualification.</center>
+  <br>
+  <center>DRAW includes Unanimous draw, Split draw and Majority draw.</center>
+  <br>
+  <center>Odds limits: Max odds: 99, Min odds: 1.01</center>
 
   <br> <br>
 </body>
