--- a/contents/projects/predict-demo/ai2.html
+++ b/contents/projects/predict-demo/ai2.html
@@ -271,7 +271,7 @@
   <br>
 
   <!-- KO -->
-  <center> ====================================== </center>
+  <center> ===================== </center>
   <br>
 
   <div class="prob-container" style="display:flex; justify-content:center;">
